Incremental style updates

--- a/src/styles/baseline.css
+++ b/src/styles/baseline.css
@@ -34,6 +34,7 @@ html {
   font-family: var(--sans-serif);
   font-size: calc(14px + (18 - 14) * ((100vw - 320px) / (1000 - 320)));
   line-height: 1.6;
+  background-color: hsl(40, 36%, 95%);
 }
 
 a {
