feat: add vale and associated rules

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,5 +1,4 @@
-{% from 'logo.njk' import m,
-createIcon %}
+{% from 'logo.njk' import m, createIcon %}
 <footer>
   <canvas class="wa" aria-hidden="true"></canvas>
   <a href="/">
