--- a/src/_assets/main.css
+++ b/src/_assets/main.css
@@ -34,7 +34,8 @@
   font-weight: 200 900;
   font-style: normal;
   font-stretch: normal;
-  src: url("/assets/fonts/SourceSerif4Variable-Roman.ttf.woff2") format("woff2"),
+  src:
+    url("/assets/fonts/SourceSerif4Variable-Roman.ttf.woff2") format("woff2"),
     url("/assets/fonts/SourceSerif4Variable-Roman.ttf.woff") format("woff"),
     url("/assets/fonts/SourceSerif4Variable-Roman.ttf") format("truetype");
 }
@@ -44,8 +45,8 @@
   font-weight: 200 900;
   font-style: italic;
   font-stretch: normal;
-  src: url("/assets/fonts/SourceSerif4Variable-Italic.ttf.woff2")
-      format("woff2"),
+  src:
+    url("/assets/fonts/SourceSerif4Variable-Italic.ttf.woff2") format("woff2"),
     url("/assets/fonts/SourceSerif4Variable-Italic.ttf.woff") format("woff"),
     url("/assets/fonts/SourceSerif4Variable-Italic.ttf") format("truetype");
 }
@@ -127,6 +128,9 @@ select {
 
 /* base */
 html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
   background-color: hsl(40, 36%, 95%);
 }
 
