--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   {% for page in collections.all %}
     <url>
-      <loc>{{ meta.url }}{{ page.url | url }}</loc>
+      <loc>{{ config.siteUrl }}{{ page.url | url }}</loc>
       <lastmod>{{ page.date.toISOString() }}</lastmod>
       <changefreq>{{ page.data.changeFreq if page.data.changeFreq else "monthly" }}</changefreq>
     </url>
