--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -40,6 +40,7 @@
         {% include 'footer.njk' %}
       </main>
     </div>
+    {% include 'analytics-snippet.njk' %}
     <script src="/assets/js/wa.js"></script>
   </body>
 </html>
