--- a/src/_includes/analytics-snippet.njk
+++ b/src/_includes/analytics-snippet.njk
@@ -1,12 +1,5 @@
 <script>
-
-const us = new URL(document.URL).hostname
-const them = new URL(document.referrer).hostname
-let gif = ""
-if (us === them) {
-  gif = `{{config.analyticsUrl}}?page={{page.url | urlencode}}`
-} else {
-  gif = `{{config.analyticsUrl}}?ref=${encodeURIComponent(document.referrer)}&page={{page.url | urlencode}}`
-}
-document.querySelector('body').insertAdjacentHTML('beforeend', `<img src="${gif}" />`)
+const url = document.URL
+let gif = `{{config.analyticsUrl}}?ref=${encodeURIComponent(document.referrer)}&url=${encodeURIComponent(url)}`
+document.querySelector('body').insertAdjacentHTML('beforeend', `<img alt="" src="${gif}" onerror="this.style.display='none'" />`)
 </script>
