add 'now' shortcode
Clean up the footer date to use a new shortcode

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,7 +4,7 @@
   <a href="/">
     {{ m("hsl(0, 0%, 20%)") }}
   </a>
-  <p>All materials &copy; Mark Michon 2023</p>
+  <p>All materials &copy; Mark Michon {% now %}</p>
   <ul>
     {% for item in config.socials %}
       <li>
