fix trailing slashes

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -37,10 +37,10 @@
         </a>
         <ul>
           <li>
-            <a href="/articles">Articles</a>
+            <a href="/articles/">Articles</a>
           </li>
           <li>
-            <a href="/hire" class="active">Hire me</a>
+            <a href="/hire/" class="active">Hire me</a>
           </li>
         </ul>
       </div>
