small text change to intro

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -9,9 +9,9 @@ permalink: /
   {% renderTemplate 'md' %}
   # Mark Michon
   ## Let's build a better web.
-  I'm a technical writer, former educator, substitute front-end dev, and erstwhile designer. I care deeply about approachable design, accessible information, and the power of the open web.
+  I'm a technical writer, former educator, occasional developer, and erstwhile designer. I care deeply about approachable design, accessible information, and the power of the open web.
 
-  I previously managed documentation and technical content at [Bearer](https://www.bearer.com), taught development and design at [Full Sail University](https://fullsail.edu), and built courses for [Designlab](https://trydesignlab.com).
+  Previously, I managed documentation and technical content at [Bearer](https://www.bearer.com), taught development and design at [Full Sail University](https://fullsail.edu), and built courses for [Designlab](https://trydesignlab.com).
 
   I'm looking for opportunities working on product and developer documentation. [Here's how I can help your team](/hire).
   {% endrenderTemplate %}
