initial pass at custom syntax highlighter theme.
This will need eventual update, but it's a good starting place.

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/img/favicon.svg">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/night-owl.css">
+    <link rel="stylesheet" href="/assets/css/hljs-custom.css">
     {% if page.url == "/"%}
     <title>{{title}}</title>
     <meta property="og:type" content="website" />
