--- a/src/_assets/main.css
+++ b/src/_assets/main.css
@@ -218,6 +218,7 @@ a:focus {
 
 /* code blocks */
 code {
+  font-family: var(--font-mono);
   border-radius: 0.25rem;
   font-size: var(--step--1);
   /* white-space: nowrap; */
@@ -362,7 +363,7 @@ pre code {
     color: var(--color-light);
     padding: 0.5rem 1rem;
     font-family: var(--font-serif);
-    font-weight: 100;
+    font-weight: 200;
     font-size: var(--step-1);
     padding-left: calc(1rem + 15vw);
     margin-left: calc((1rem + 15vw) * -1);
