--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -25,6 +25,8 @@
     <meta property="og:url" content="{{config.url}}{{page.url}}" />
     <meta property="og:description" content="{{description}}" />
 
+    <meta name="fediverse:creator" content="{{config.author.fediverse}}" />
+
 
   </head>
   {% from 'logo.njk' import m %}
