--- a/src/_assets/main.css
+++ b/src/_assets/main.css
@@ -113,7 +113,8 @@ a:not([class]) {
 
 /* Make images easier to work with */
 img,
-picture, video {
+picture,
+video {
   max-width: 100%;
   display: block;
 }
@@ -219,7 +220,7 @@ a:focus {
 }
 
 ::selection {
-  color:var(--color-light);
+  color: var(--color-light);
   background-color: var(--color-primary);
 }
 
@@ -227,7 +228,7 @@ a:focus {
 code {
   font-family: var(--font-mono);
   border-radius: 0.25rem;
-  font-size: .75em;
+  font-size: 0.75em;
   /* white-space: nowrap; */
   /* display: inline-block; */
   padding: 0.25rem;
@@ -480,9 +481,9 @@ article {
   font-family: var(--font-serif);
   font-size: var(--step-1);
   > * {
-      max-width: 730px;
-      margin-left: auto;
-      margin-right: auto;
+    max-width: 730px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   & h1,
