Update hiring info + now page

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -39,7 +39,7 @@
         <ul>
           <li><a href="/articles/">Articles</a></li>
           <li><a href="/now/">Now</a></li>
-          <li><a href="/hire/" class="active">Hire me</a></li>
+          <li><a href="/hire/">Work</a></li>
         </ul>
       </div>
       <main>
